[project]
name = "markets-trending-to-bluesky"
version = "0.1.0"
description = "A bot to fetch market indicators, summarize trends, and post them to Bluesky"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "atproto>=0.0.65",
    "beautifulsoup4",
    "dnspython",
    "google-genai",
    "packaging",
    "Pillow",
    "pytz",
    "requests",
    "python-dotenv",
]

[tool.uv]
override-dependencies = [
    "cryptography>=48.0.1",
]
exclude-newer = "7 days"
